--- a/gistdeck.css
+++ b/gistdeck.css
@@ -216,121 +216,121 @@ div.highlight pre, pre code, li code {
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('font/Ubuntu-R-webfont.eot');
-    src: url('font/Ubuntu-R-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Ubuntu-R-webfont.woff') format('woff'),
-         url('font/Ubuntu-R-webfont.ttf') format('truetype'),
-         url('font/Ubuntu-R-webfont.svg#UbuntuRegular') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-R-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-R-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-R-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-R-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-R-webfont.svg#UbuntuRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('font/Ubuntu-RI-webfont.eot');
-    src: url('font/Ubuntu-RI-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Ubuntu-RI-webfont.woff') format('woff'),
-         url('font/Ubuntu-RI-webfont.ttf') format('truetype'),
-         url('font/Ubuntu-RI-webfont.svg#UbuntuItalic') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-RI-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-RI-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-RI-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-RI-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-RI-webfont.svg#UbuntuItalic') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('font/Ubuntu-B-webfont.eot');
-    src: url('font/Ubuntu-B-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Ubuntu-B-webfont.woff') format('woff'),
-         url('font/Ubuntu-B-webfont.ttf') format('truetype'),
-         url('font/Ubuntu-B-webfont.svg#UbuntuBold') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-B-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-B-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-B-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-B-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-B-webfont.svg#UbuntuBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('font/Ubuntu-BI-webfont.eot');
-    src: url('font/Ubuntu-BI-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Ubuntu-BI-webfont.woff') format('woff'),
-         url('font/Ubuntu-BI-webfont.ttf') format('truetype'),
-         url('font/Ubuntu-BI-webfont.svg#UbuntuBoldItalic') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-BI-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-BI-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-BI-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-BI-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-BI-webfont.svg#UbuntuBoldItalic') format('svg');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('font/Ubuntu-L-webfont.eot');
-    src: url('font/Ubuntu-L-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Ubuntu-L-webfont.woff') format('woff'),
-         url('font/Ubuntu-L-webfont.ttf') format('truetype'),
-         url('font/Ubuntu-L-webfont.svg#UbuntuLight') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-L-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-L-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-L-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-L-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-L-webfont.svg#UbuntuLight') format('svg');
     font-weight: lighter;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Ubuntu';
-    src: url('font/Ubuntu-LI-webfont.eot');
-    src: url('font/Ubuntu-LI-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/Ubuntu-LI-webfont.woff') format('woff'),
-         url('font/Ubuntu-LI-webfont.ttf') format('truetype'),
-         url('font/Ubuntu-LI-webfont.svg#UbuntuLightItalic') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-LI-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-LI-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-LI-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-LI-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/Ubuntu-LI-webfont.svg#UbuntuLightItalic') format('svg');
     font-weight: lighter;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Ubuntu Mono';
-    src: url('font/UbuntuMono-R-webfont.eot');
-    src: url('font/UbuntuMono-R-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/UbuntuMono-R-webfont.woff') format('woff'),
-         url('font/UbuntuMono-R-webfont.ttf') format('truetype'),
-         url('font/UbuntuMono-R-webfont.svg#UbuntuMonoRegular') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-R-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-R-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-R-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-R-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-R-webfont.svg#UbuntuMonoRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Ubuntu Mono';
-    src: url('font/UbuntuMono-RI-webfont.eot');
-    src: url('font/UbuntuMono-RI-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/UbuntuMono-RI-webfont.woff') format('woff'),
-         url('font/UbuntuMono-RI-webfont.ttf') format('truetype'),
-         url('font/UbuntuMono-RI-webfont.svg#UbuntuMonoItalic') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-RI-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-RI-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-RI-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-RI-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-RI-webfont.svg#UbuntuMonoItalic') format('svg');
     font-weight: normal;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Ubuntu Mono';
-    src: url('font/UbuntuMono-B-webfont.eot');
-    src: url('font/UbuntuMono-B-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/UbuntuMono-B-webfont.woff') format('woff'),
-         url('font/UbuntuMono-B-webfont.ttf') format('truetype'),
-         url('font/UbuntuMono-B-webfont.svg#UbuntuMonoBold') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-B-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-B-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-B-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-B-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-B-webfont.svg#UbuntuMonoBold') format('svg');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'Ubuntu Mono';
-    src: url('font/UbuntuMono-BI-webfont.eot');
-    src: url('font/UbuntuMono-BI-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/UbuntuMono-BI-webfont.woff') format('woff'),
-         url('font/UbuntuMono-BI-webfont.ttf') format('truetype'),
-         url('font/UbuntuMono-BI-webfont.svg#UbuntuMonoBoldItalic') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-BI-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-BI-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-BI-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-BI-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuMono-BI-webfont.svg#UbuntuMonoBoldItalic') format('svg');
     font-weight: bold;
     font-style: italic;
 }
 
 @font-face {
     font-family: 'Ubuntu Title';
-    src: url('font/UbuntuTitling-Bold-webfont.eot');
-    src: url('font/UbuntuTitling-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('font/UbuntuTitling-Bold-webfont.woff') format('woff'),
-         url('font/UbuntuTitling-Bold-webfont.ttf') format('truetype'),
-         url('font/UbuntuTitling-Bold-webfont.svg#UbuntuTitlingBold') format('svg');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuTitling-Bold-webfont.eot');
+    src: url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuTitling-Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuTitling-Bold-webfont.woff') format('woff'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuTitling-Bold-webfont.ttf') format('truetype'),
+         url('https://s3.amazonaws.com/tybenz.gistdeck/font/UbuntuTitling-Bold-webfont.svg#UbuntuTitlingBold') format('svg');
     font-weight: normal;
     font-style: normal;
 }
